--- a/notebooks/s3_register_environment.ipynb
+++ b/notebooks/s3_register_environment.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "23891525",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Overriding of current TracerProvider is not allowed\n",
-      "Overriding of current LoggerProvider is not allowed\n",
-      "Overriding of current MeterProvider is not allowed\n",
-      "Attempting to instrument while already instrumented\n",
-      "Attempting to instrument while already instrumented\n",
-      "Attempting to instrument while already instrumented\n",
-      "Attempting to instrument while already instrumented\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -42,9 +29,9 @@
     "\n",
     "# Step 2: Register environment from your environment.yml\n",
     "env = Environment(\n",
-    "    name=\"emotion-clf-pipeline-env\",\n",
+    "    name=\"emotion-clf-pipeline-env-v2\",\n",
     "    description=\"Custom environment for emotion classifier with all training and inference dependencies.\",\n",
-    "    conda_file=\"../environment/environment.yml\",\n",
+    "    conda_file=\"../environment.yml\",\n",
     "    image=\"mcr.microsoft.com/azureml/openmpi4.1.0-ubuntu20.04:latest\"\n",
     ")\n",
     "\n",
@@ -86,7 +73,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "emotion-clf-pipeline-kqkkoEEL-py3.11",
+   "display_name": "emotion-clf-pipeline-bOnCAZAr-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -100,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
