--- a/notebooks/s3_upload_cleaned_data.ipynb
+++ b/notebooks/s3_upload_cleaned_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2af41190",
    "metadata": {},
    "outputs": [
@@ -13,6 +13,7 @@
       "Overriding of current TracerProvider is not allowed\n",
       "Overriding of current LoggerProvider is not allowed\n",
       "Overriding of current MeterProvider is not allowed\n",
+      "Attempting to instrument while already instrumented\n",
       "Attempting to instrument while already instrumented\n",
       "Attempting to instrument while already instrumented\n",
       "Attempting to instrument while already instrumented\n",
@@ -49,7 +50,7 @@
     "    path=data_path,\n",
     "    type=\"uri_folder\",\n",
     "    name=\"emotion-raw-train\",\n",
-    "    version=\"1\",\n",
+    "    version=\"3\",\n",
     "    description=\"Cleaned and labeled training data for emotion classification\"\n",
     ")\n",
     "\n",
@@ -130,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "emotion-clf-pipeline-kqkkoEEL-py3.11",
+   "display_name": "emotion-clf-pipeline-bOnCAZAr-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
