--- a/src/Pipeline.ipynb
+++ b/src/Pipeline.ipynb
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9eb9f9c7",
+   "id": "5639fb30",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
       "\n",
       "Submitting job 1/6: random_forest_config_1\n",
       "Training script created successfully with proper encoding\n",
-      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/4982db09dc49fff8b4b78c64b7953422/train/\n",
+      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/55dd9664b81809ba9dd646fa4024abd5/feedback_upload_39__hn2s/\n",
       "Test dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/43d17bfd2745a38aac4e0e6ca508aac0/test/\n",
       "Configuration: random_forest_config_1\n",
       "Model: random_forest\n",
@@ -48,10 +48,7 @@
       "Class BaseAutoDeleteSettingSchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
       "Class IntellectualPropertySchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
       "Class ProtectionLevelSchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
-      "Class BaseIntellectualPropertySchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n",
-      "Uploading azure_scripts (0.01 MBs): 100%|##########| 13792/13792 [00:00<00:00, 221832.17it/s]\n",
-      "\n",
-      "\n"
+      "Class BaseIntellectualPropertySchema: This is an experimental class, and may change at any time. Please see https://aka.ms/azuremlexperimental for more information.\n"
      ]
     },
     {
@@ -59,74 +56,74 @@
      "output_type": "stream",
      "text": [
       "Job 'random_forest_config_1' submitted successfully!\n",
-      "Monitor at: https://ml.azure.com/runs/nifty_tree_p7n6f9bzkr?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
+      "Monitor at: https://ml.azure.com/runs/dreamy_animal_gqnj2my846?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
       "[SUCCESS] Successfully submitted: random_forest_config_1\n",
       "\n",
       "Submitting job 2/6: random_forest_config_2\n",
       "Training script created successfully with proper encoding\n",
-      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/4982db09dc49fff8b4b78c64b7953422/train/\n",
+      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/55dd9664b81809ba9dd646fa4024abd5/feedback_upload_39__hn2s/\n",
       "Test dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/43d17bfd2745a38aac4e0e6ca508aac0/test/\n",
       "Configuration: random_forest_config_2\n",
       "Model: random_forest\n",
       "Parameters: {'n_estimators': 200, 'max_depth': 15, 'min_samples_split': 5}\n",
       "Job 'random_forest_config_2' submitted successfully!\n",
-      "Monitor at: https://ml.azure.com/runs/red_chayote_147559knp6?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
+      "Monitor at: https://ml.azure.com/runs/tidy_candle_h0bqkr5gj5?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
       "[SUCCESS] Successfully submitted: random_forest_config_2\n",
       "\n",
       "Submitting job 3/6: random_forest_config_3\n",
       "Training script created successfully with proper encoding\n",
-      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/4982db09dc49fff8b4b78c64b7953422/train/\n",
+      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/55dd9664b81809ba9dd646fa4024abd5/feedback_upload_39__hn2s/\n",
       "Test dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/43d17bfd2745a38aac4e0e6ca508aac0/test/\n",
       "Configuration: random_forest_config_3\n",
       "Model: random_forest\n",
       "Parameters: {'n_estimators': 150, 'max_depth': 20, 'min_samples_split': 3}\n",
       "Job 'random_forest_config_3' submitted successfully!\n",
-      "Monitor at: https://ml.azure.com/runs/nifty_heart_8zmljbhpmh?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
+      "Monitor at: https://ml.azure.com/runs/coral_drop_sdgqmrdznh?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
       "[SUCCESS] Successfully submitted: random_forest_config_3\n",
       "\n",
       "Submitting job 4/6: logistic_regression_config_1\n",
       "Training script created successfully with proper encoding\n",
-      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/4982db09dc49fff8b4b78c64b7953422/train/\n",
+      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/55dd9664b81809ba9dd646fa4024abd5/feedback_upload_39__hn2s/\n",
       "Test dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/43d17bfd2745a38aac4e0e6ca508aac0/test/\n",
       "Configuration: logistic_regression_config_1\n",
       "Model: logistic_regression\n",
       "Parameters: {'C': 1.0}\n",
       "Job 'logistic_regression_config_1' submitted successfully!\n",
-      "Monitor at: https://ml.azure.com/runs/strong_whale_81kj1j79hs?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
+      "Monitor at: https://ml.azure.com/runs/cool_drop_1rchlp0p18?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
       "[SUCCESS] Successfully submitted: logistic_regression_config_1\n",
       "\n",
       "Submitting job 5/6: logistic_regression_config_2\n",
       "Training script created successfully with proper encoding\n",
-      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/4982db09dc49fff8b4b78c64b7953422/train/\n",
+      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/55dd9664b81809ba9dd646fa4024abd5/feedback_upload_39__hn2s/\n",
       "Test dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/43d17bfd2745a38aac4e0e6ca508aac0/test/\n",
       "Configuration: logistic_regression_config_2\n",
       "Model: logistic_regression\n",
       "Parameters: {'C': 0.1}\n",
       "Job 'logistic_regression_config_2' submitted successfully!\n",
-      "Monitor at: https://ml.azure.com/runs/loyal_mango_6gh997yswz?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
+      "Monitor at: https://ml.azure.com/runs/sharp_balloon_w1thry8ktr?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
       "[SUCCESS] Successfully submitted: logistic_regression_config_2\n",
       "\n",
       "Submitting job 6/6: logistic_regression_config_3\n",
       "Training script created successfully with proper encoding\n",
-      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/4982db09dc49fff8b4b78c64b7953422/train/\n",
+      "Train dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/55dd9664b81809ba9dd646fa4024abd5/feedback_upload_39__hn2s/\n",
       "Test dataset path: azureml://subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025/datastores/workspaceblobstore/paths/LocalUpload/43d17bfd2745a38aac4e0e6ca508aac0/test/\n",
       "Configuration: logistic_regression_config_3\n",
       "Model: logistic_regression\n",
       "Parameters: {'C': 10.0}\n",
       "Job 'logistic_regression_config_3' submitted successfully!\n",
-      "Monitor at: https://ml.azure.com/runs/jolly_knee_kp1qctf0mn?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
+      "Monitor at: https://ml.azure.com/runs/nifty_boot_0nj23wqwl4?wsid=/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/workspaces/NLP6-2025&tid=0a33589b-0036-4fe8-a829-3ed0926af886\n",
       "[SUCCESS] Successfully submitted: logistic_regression_config_3\n",
       "\n",
       "=== Summary ===\n",
       "Successfully submitted: 6 out of 6 jobs\n",
       "\n",
       "Job Details:\n",
-      "  - random_forest_config_1: nifty_tree_p7n6f9bzkr\n",
-      "  - random_forest_config_2: red_chayote_147559knp6\n",
-      "  - random_forest_config_3: nifty_heart_8zmljbhpmh\n",
-      "  - logistic_regression_config_1: strong_whale_81kj1j79hs\n",
-      "  - logistic_regression_config_2: loyal_mango_6gh997yswz\n",
-      "  - logistic_regression_config_3: jolly_knee_kp1qctf0mn\n",
+      "  - random_forest_config_1: dreamy_animal_gqnj2my846\n",
+      "  - random_forest_config_2: tidy_candle_h0bqkr5gj5\n",
+      "  - random_forest_config_3: coral_drop_sdgqmrdznh\n",
+      "  - logistic_regression_config_1: cool_drop_1rchlp0p18\n",
+      "  - logistic_regression_config_2: sharp_balloon_w1thry8ktr\n",
+      "  - logistic_regression_config_3: nifty_boot_0nj23wqwl4\n",
       "\n",
       "============================================================\n",
       "All jobs submitted! You can monitor them in Azure ML Studio.\n",
@@ -696,7 +693,7 @@
     "        return job\n",
     "    except Exception as e:\n",
     "        print(f\"Error submitting single configuration: {e}\")\n",
-    "        return None"
+    "        return None     "
    ]
   }
  ],
