FIX: Tracking metrics and saving visualizations to show in metrics and image section of each job

--- a/notebooks/s3_register_environment.ipynb
+++ b/notebooks/s3_register_environment.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "23891525",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Overriding of current TracerProvider is not allowed\n",
+      "Overriding of current LoggerProvider is not allowed\n",
+      "Overriding of current MeterProvider is not allowed\n",
+      "Attempting to instrument while already instrumented\n",
+      "Attempting to instrument while already instrumented\n",
+      "Attempting to instrument while already instrumented\n",
+      "Attempting to instrument while already instrumented\n",
+      "Attempting to instrument while already instrumented\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -29,9 +43,10 @@
     "\n",
     "# Step 2: Register environment from your environment.yml\n",
     "env = Environment(\n",
-    "    name=\"emotion-clf-pipeline-env-v2\",\n",
+    "    name=\"emotion-clf-pipeline-env\",\n",
+    "    version=\"28\",\n",
     "    description=\"Custom environment for emotion classifier with all training and inference dependencies.\",\n",
-    "    conda_file=\"../environment.yml\",\n",
+    "    conda_file=\"../environment/environment.yml\",\n",
     "    image=\"mcr.microsoft.com/azureml/openmpi4.1.0-ubuntu20.04:latest\"\n",
     ")\n",
     "\n",
