--- a/notebooks/s3_upload_cleaned_data.ipynb
+++ b/notebooks/s3_upload_cleaned_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2af41190",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Overriding of current TracerProvider is not allowed\n",
-      "Overriding of current LoggerProvider is not allowed\n",
-      "Overriding of current MeterProvider is not allowed\n",
-      "Attempting to instrument while already instrumented\n",
-      "Attempting to instrument while already instrumented\n",
-      "Attempting to instrument while already instrumented\n",
-      "Attempting to instrument while already instrumented\n",
-      "Attempting to instrument while already instrumented\n"
+      "c:\\Users\\Soheil\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\emotion-clf-pipeline-bOnCAZAr-py3.11\\Lib\\site-packages\\requests\\__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -50,7 +44,7 @@
     "    path=data_path,\n",
     "    type=\"uri_folder\",\n",
     "    name=\"emotion-raw-train\",\n",
-    "    version=\"3\",\n",
+    "    version=\"9\",\n",
     "    description=\"Cleaned and labeled training data for emotion classification\"\n",
     ")\n",
     "\n",
