--- a/notebooks/azure_endpoint.ipynb
+++ b/notebooks/azure_endpoint.ipynb
@@ -2,145 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "44947b1d",
+   "execution_count": 2,
+   "id": "60e79391",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Overriding of current TracerProvider is not allowed\n",
-      "Overriding of current LoggerProvider is not allowed\n",
-      "Overriding of current MeterProvider is not allowed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Attempting to instrument while already instrumented\n",
-      "Attempting to instrument while already instrumented\n",
-      "Attempting to instrument while already instrumented\n",
-      "Attempting to instrument while already instrumented\n",
-      "Attempting to instrument while already instrumented\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Endpoint Name: deberta-endpoint\n",
-      "  Status: Succeeded\n",
-      "  Scoring URI: http://194.171.191.227:30526/api/v1/endpoint/deberta-endpoint/score\n",
-      "  Authentication Mode: key\n",
-      "--------------------------------------------------\n"
+      "Response from DeBERTa endpoint:\n",
+      "\"{\\\"predictions\\\": {\\\"emotion\\\": \\\"unknown\\\", \\\"sub_emotion\\\": \\\"unknown\\\", \\\"intensity\\\": \\\"unknown\\\"}, \\\"raw_predictions\\\": {\\\"emotion\\\": [[-2.3535149097442627, -2.7075352668762207, -2.1163432598114014, 2.768012762069702, 3.4213383197784424, -2.740438461303711, 1.3640868663787842]], \\\"sub_emotion\\\": [[-0.908567488193512, 0.7767903208732605, -4.667848587036133, -0.5953039526939392, -0.41957715153694153, -0.660086452960968, 1.8608988523483276, 4.128921985626221, -2.0373587608337402, -1.554884910583496, -1.1481451988220215, -3.3077480792999268, -3.654724597930908, -0.7455893754959106, -2.2528023719787598, -4.40749454498291, -5.066255569458008, -2.410703182220459, -4.219160079956055, -0.38470709323883057, 4.7725701332092285, 0.5356895327568054, -0.6146451234817505, 2.2942633628845215, 0.11964304745197296, -4.125598907470703, -2.3472158908843994, -0.8247337937355042]], \\\"intensity\\\": [[3.7233965396881104, 1.0488967895507812, -3.915595293045044]]}, \\\"confidence_scores\\\": {\\\"emotion\\\": [[-2.3535149097442627, -2.7075352668762207, -2.1163432598114014, 2.768012762069702, 3.4213383197784424, -2.740438461303711, 1.3640868663787842]], \\\"sub_emotion\\\": [[-0.908567488193512, 0.7767903208732605, -4.667848587036133, -0.5953039526939392, -0.41957715153694153, -0.660086452960968, 1.8608988523483276, 4.128921985626221, -2.0373587608337402, -1.554884910583496, -1.1481451988220215, -3.3077480792999268, -3.654724597930908, -0.7455893754959106, -2.2528023719787598, -4.40749454498291, -5.066255569458008, -2.410703182220459, -4.219160079956055, -0.38470709323883057, 4.7725701332092285, 0.5356895327568054, -0.6146451234817505, 2.2942633628845215, 0.11964304745197296, -4.125598907470703, -2.3472158908843994, -0.8247337937355042]], \\\"intensity\\\": [[3.7233965396881104, 1.0488967895507812, -3.915595293045044]]}, \\\"status\\\": \\\"success\\\"}\"\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "from azure.ai.ml import MLClient\n",
-    "from azure.identity import ClientSecretCredential\n",
-    "\n",
-    "# Load environment variables\n",
-    "load_dotenv()\n",
-    "\n",
-    "# Get Azure credentials from environment variables\n",
-    "subscription_id = os.getenv(\"AZURE_SUBSCRIPTION_ID\")\n",
-    "resource_group = os.getenv(\"AZURE_RESOURCE_GROUP\")\n",
-    "workspace_name = os.getenv(\"AZURE_WORKSPACE_NAME\")\n",
-    "tenant_id = os.getenv(\"AZURE_TENANT_ID\")\n",
-    "client_id = os.getenv(\"AZURE_CLIENT_ID\")\n",
-    "client_secret = os.getenv(\"AZURE_CLIENT_SECRET\")\n",
-    "\n",
-    "# Create credential and ML client\n",
-    "credential = ClientSecretCredential(\n",
-    "    tenant_id=tenant_id,\n",
-    "    client_id=client_id,\n",
-    "    client_secret=client_secret\n",
-    ")\n",
-    "\n",
-    "ml_client = MLClient(\n",
-    "    credential=credential,\n",
-    "    subscription_id=subscription_id,\n",
-    "    resource_group_name=resource_group,\n",
-    "    workspace_name=workspace_name\n",
-    ")\n",
-    "\n",
-    "# List all endpoints\n",
-    "endpoints = ml_client.online_endpoints.list()\n",
-    "for endpoint in endpoints:\n",
-    "    print(f\"Endpoint Name: {endpoint.name}\")\n",
-    "    print(f\"  Status: {endpoint.provisioning_state}\")\n",
-    "    print(f\"  Scoring URI: {endpoint.scoring_uri}\")\n",
-    "    print(f\"  Authentication Mode: {endpoint.auth_mode}\")\n",
-    "    print(\"-\" * 50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0d260b72",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "KubernetesOnlineEndpoint({'provisioning_state': 'Succeeded', 'scoring_uri': 'http://194.171.191.227:30526/api/v1/endpoint/deberta-endpoint/score', 'openapi_uri': 'http://194.171.191.227:30526/api/v1/endpoint/deberta-endpoint/swagger.json', 'name': 'deberta-endpoint', 'description': None, 'tags': {}, 'properties': {'createdBy': 'a2230f31-0fda-428d-8c5c-ec79e91a49f5', 'createdAt': '2025-06-20T11:46:26.167926+0000', 'lastModifiedAt': '2025-06-20T12:33:44.357267+0000', 'azureml.onlineendpointid': '/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourcegroups/buas-y2/providers/microsoft.machinelearningservices/workspaces/nlp6-2025/onlineendpoints/deberta-endpoint', 'AzureAsyncOperationUri': 'https://management.azure.com/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/providers/Microsoft.MachineLearningServices/locations/westeurope/mfeOperationsStatus/oeidp:1db9dd87-ebf5-4750-96c1-5679c7f557d6:74589479-ea40-402e-a188-03ebcaaaf628?api-version=2022-02-01-preview'}, 'print_as_yaml': False, 'id': '/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourceGroups/buas-y2/providers/Microsoft.MachineLearningServices/workspaces/NLP6-2025/onlineEndpoints/deberta-endpoint', 'Resource__source_path': '', 'base_path': 'x:\\\\University\\\\2024-25d-fai2-adsai-group-nlp6\\\\notebooks', 'creation_context': None, 'serialize': <msrest.serialization.Serializer object at 0x000001D06C86B410>, 'auth_mode': 'key', 'location': 'westeurope', 'identity': <azure.ai.ml.entities._credentials.IdentityConfiguration object at 0x000001D06C8685D0>, 'traffic': {'blue': 100}, 'mirror_traffic': {}, 'kind': 'K8S', 'compute': '/subscriptions/0a94de80-6d3b-49f2-b3e9-ec5818862801/resourceGroups/buas-y2/providers/Microsoft.MachineLearningServices/workspaces/NLP6-2025/computes/adsai-lambda-0'})"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "endpoint"
+    "import urllib.request\n",
+    "import json\n",
+    " \n",
+    "# Your primary key (replace with secondary if you want)\n",
+    "api_key = '72fNK2ogONHXje1XShvxvQ3mZUKZN8kErOTKnZBx1xaEd9apKnoZJQQJ99BFAAAAAAAAAAAAINFRAZML3cS9'\n",
+    " \n",
+    "if not api_key:\n",
+    "    raise Exception(\"A key should be provided to invoke the endpoint\")\n",
+    " \n",
+    "# Example input data - adjust this according to your model's expected input format\n",
+    "data = {\n",
+    "        \"text\": \"This is a test sentence to evaluate the DeBERTa endpoint.\"\n",
+    "    }\n",
+    " \n",
+    "# Encode the data to JSON bytes\n",
+    "body = str.encode(json.dumps(data))\n",
+    " \n",
+    "# Your endpoint URL\n",
+    "url = 'http://194.171.191.227:30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score'\n",
+    " \n",
+    "# Set the request headers including authorization with your API key\n",
+    "headers = {\n",
+    "    'Content-Type': 'application/json',\n",
+    "    'Accept': 'application/json',\n",
+    "    'Authorization': 'Bearer ' + api_key\n",
+    "}\n",
+    " \n",
+    "# Prepare the request\n",
+    "req = urllib.request.Request(url, body, headers)\n",
+    " \n",
+    "try:\n",
+    "    # Send the request and read the response\n",
+    "    response = urllib.request.urlopen(req)\n",
+    "    result = response.read()\n",
+    "    print(\"Response from DeBERTa endpoint:\")\n",
+    "    print(result.decode(\"utf-8\"))\n",
+    " \n",
+    "except urllib.error.HTTPError as error:\n",
+    "    # If there's an HTTP error, print status and details\n",
+    "    print(\"The request failed with status code:\", error.code)\n",
+    "    print(\"Headers:\", error.info())\n",
+    "    print(\"Error response:\", error.read().decode(\"utf8\", 'ignore'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75595659",
+   "id": "30dacad0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import requests\n",
-    "import json\n",
-    "\n",
-    "# Get the endpoint keys for authentication\n",
-    "endpoint_keys = ml_client.online_endpoints.get_keys(name=endpoint.name)\n",
-    "primary_key = endpoint_keys.primary_key\n",
-    "\n",
-    "# Prepare sample data for inference\n",
-    "sample_data = {\n",
-    "    \"input_data\": {\n",
-    "        \"columns\": [\"text\"],\n",
-    "        \"index\": [0],\n",
-    "        \"data\": [[\"I am so excited about this new project, it's going to be amazing!\"]]\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "# Set up headers with authentication\n",
-    "headers = {\n",
-    "    \"Content-Type\": \"application/json\",\n",
-    "    \"Accept\": \"application/json\",\n",
-    "    \"Authorization\": f\"Bearer {primary_key}\"\n",
-    "}\n",
-    "\n",
-    "# Make a POST request to the endpoint\n",
-    "response = requests.post(\n",
-    "    endpoint.scoring_uri,\n",
-    "    data=json.dumps(sample_data),\n",
-    "    headers=headers\n",
-    ")\n",
-    "\n",
-    "# Print the response\n",
-    "print(f\"Status Code: {response.status_code}\")\n",
-    "print(f\"Response: {response.json()}\")"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61c6c83b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
