--- a/notebooks/azure_endpoint.ipynb
+++ b/notebooks/azure_endpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "60e79391",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,8 @@
     "    response = urllib.request.urlopen(req)\n",
     "    result = response.read()\n",
     "    print(\"Response from DeBERTa endpoint:\")\n",
-    "    print(result.decode(\"utf-8\"))\n",
+    "    response = eval(result.decode(\"utf-8\"))\n",
+    "    print(response)\n",
     " \n",
     "except urllib.error.HTTPError as error:\n",
     "    # If there's an HTTP error, print status and details\n",
@@ -62,8 +63,166 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "2a7c22f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emotion:  neutral \n",
+      "Sub-emotion:  melancholy \n",
+      "Intensity:  mild\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example: Complete workflow for getting final predictions\n",
+    "def get_final_predictions(api_response):\n",
+    "    \"\"\"\n",
+    "    Complete workflow to extract and decode predictions from API response.\n",
+    "    \n",
+    "    Args:\n",
+    "        api_response (dict): Full response from the emotion classification API\n",
+    "        \n",
+    "    Returns:\n",
+    "        dict: Final decoded predictions with metadata\n",
+    "    \"\"\"\n",
+    "    if api_response.get('status') != 'success':\n",
+    "        return {'error': 'API call was not successful'}\n",
+    "    \n",
+    "    # Extract raw predictions\n",
+    "    raw_predictions = api_response.get('raw_predictions', {})\n",
+    "    \n",
+    "    # Decode predictions\n",
+    "    final_predictions = decode_predictions(raw_predictions)\n",
+    "    \n",
+    "    if final_predictions:\n",
+    "        # Add metadata\n",
+    "        final_predictions['status'] = 'success'\n",
+    "        final_predictions['input_text'] = \"This is a test sentence to evaluate the DeBERTa endpoint.\"\n",
+    "        final_predictions['model_info'] = {\n",
+    "            'endpoint': 'deberta-emotion-clf-endpoint',\n",
+    "            'prediction_classes': {\n",
+    "                'emotions_available': len(emotion_encoder.classes_),\n",
+    "                'sub_emotions_available': len(sub_emotion_encoder.classes_),\n",
+    "                'intensities_available': len(intensity_encoder.classes_)\n",
+    "            }\n",
+    "        }\n",
+    "    \n",
+    "    return final_predictions\n",
+    "\n",
+    "# Get the final prediction dictionary\n",
+    "pred_d = get_final_predictions(response)\n",
+    "\n",
+    "emotion, sub_emotion, intensity = pred_d.get(\"emotion\"), pred_d.get(\"sub_emotion\"), pred_d.get(\"intensity\")\n",
+    "\n",
+    "print(\"Emotion: \", emotion, \n",
+    "      \"\\nSub-emotion: \", sub_emotion, \n",
+    "      \"\\nIntensity: \", intensity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "14c32c82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'predictions': {'emotion': 'unknown',\n",
+       "  'sub_emotion': 'unknown',\n",
+       "  'intensity': 'unknown'},\n",
+       " 'raw_predictions': {'emotion': [[-2.3535149097442627,\n",
+       "    -2.7075352668762207,\n",
+       "    -2.1163432598114014,\n",
+       "    2.768012762069702,\n",
+       "    3.4213383197784424,\n",
+       "    -2.740438461303711,\n",
+       "    1.3640868663787842]],\n",
+       "  'sub_emotion': [[-0.908567488193512,\n",
+       "    0.7767903208732605,\n",
+       "    -4.667848587036133,\n",
+       "    -0.5953039526939392,\n",
+       "    -0.41957715153694153,\n",
+       "    -0.660086452960968,\n",
+       "    1.8608988523483276,\n",
+       "    4.128921985626221,\n",
+       "    -2.0373587608337402,\n",
+       "    -1.554884910583496,\n",
+       "    -1.1481451988220215,\n",
+       "    -3.3077480792999268,\n",
+       "    -3.654724597930908,\n",
+       "    -0.7455893754959106,\n",
+       "    -2.2528023719787598,\n",
+       "    -4.40749454498291,\n",
+       "    -5.066255569458008,\n",
+       "    -2.410703182220459,\n",
+       "    -4.219160079956055,\n",
+       "    -0.38470709323883057,\n",
+       "    4.7725701332092285,\n",
+       "    0.5356895327568054,\n",
+       "    -0.6146451234817505,\n",
+       "    2.2942633628845215,\n",
+       "    0.11964304745197296,\n",
+       "    -4.125598907470703,\n",
+       "    -2.3472158908843994,\n",
+       "    -0.8247337937355042]],\n",
+       "  'intensity': [[3.7233965396881104, 1.0488967895507812, -3.915595293045044]]},\n",
+       " 'confidence_scores': {'emotion': [[-2.3535149097442627,\n",
+       "    -2.7075352668762207,\n",
+       "    -2.1163432598114014,\n",
+       "    2.768012762069702,\n",
+       "    3.4213383197784424,\n",
+       "    -2.740438461303711,\n",
+       "    1.3640868663787842]],\n",
+       "  'sub_emotion': [[-0.908567488193512,\n",
+       "    0.7767903208732605,\n",
+       "    -4.667848587036133,\n",
+       "    -0.5953039526939392,\n",
+       "    -0.41957715153694153,\n",
+       "    -0.660086452960968,\n",
+       "    1.8608988523483276,\n",
+       "    4.128921985626221,\n",
+       "    -2.0373587608337402,\n",
+       "    -1.554884910583496,\n",
+       "    -1.1481451988220215,\n",
+       "    -3.3077480792999268,\n",
+       "    -3.654724597930908,\n",
+       "    -0.7455893754959106,\n",
+       "    -2.2528023719787598,\n",
+       "    -4.40749454498291,\n",
+       "    -5.066255569458008,\n",
+       "    -2.410703182220459,\n",
+       "    -4.219160079956055,\n",
+       "    -0.38470709323883057,\n",
+       "    4.7725701332092285,\n",
+       "    0.5356895327568054,\n",
+       "    -0.6146451234817505,\n",
+       "    2.2942633628845215,\n",
+       "    0.11964304745197296,\n",
+       "    -4.125598907470703,\n",
+       "    -2.3472158908843994,\n",
+       "    -0.8247337937355042]],\n",
+       "  'intensity': [[3.7233965396881104, 1.0488967895507812, -3.915595293045044]]},\n",
+       " 'status': 'success'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "30dacad0",
+   "id": "ff0f9847",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -71,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61c6c83b",
+   "id": "71f8aba0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -79,7 +238,175 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb53979b",
+   "id": "165332a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request\n",
+    "import json\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "\n",
+    "class AzureEmotionPredictor:\n",
+    "    \"\"\"\n",
+    "    Handles emotion prediction via Azure endpoint, decoding, and post-processing.\n",
+    "    Ensures sub-emotion is valid for the predicted main emotion.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, api_key, endpoint_url, encoders_dir=\"models/encoders\"):\n",
+    "        \"\"\"\n",
+    "        Initialize with API key, endpoint URL, and encoder directory.\n",
+    "        \"\"\"\n",
+    "        self.api_key = api_key\n",
+    "        self.endpoint_url = endpoint_url\n",
+    "        self.encoders_dir = encoders_dir\n",
+    "        self.emotion_mapping = {\n",
+    "            \"curiosity\": \"happiness\",\n",
+    "            \"neutral\": \"neutral\",\n",
+    "            \"annoyance\": \"anger\",\n",
+    "            \"confusion\": \"surprise\",\n",
+    "            \"disappointment\": \"sadness\",\n",
+    "            \"excitement\": \"happiness\",\n",
+    "            \"surprise\": \"surprise\",\n",
+    "            \"realization\": \"surprise\",\n",
+    "            \"desire\": \"happiness\",\n",
+    "            \"approval\": \"happiness\",\n",
+    "            \"disapproval\": \"disgust\",\n",
+    "            \"embarrassment\": \"fear\",\n",
+    "            \"admiration\": \"happiness\",\n",
+    "            \"anger\": \"anger\",\n",
+    "            \"optimism\": \"happiness\",\n",
+    "            \"sadness\": \"sadness\",\n",
+    "            \"joy\": \"happiness\",\n",
+    "            \"fear\": \"fear\",\n",
+    "            \"remorse\": \"sadness\",\n",
+    "            \"gratitude\": \"happiness\",\n",
+    "            \"disgust\": \"disgust\",\n",
+    "            \"love\": \"happiness\",\n",
+    "            \"relief\": \"happiness\",\n",
+    "            \"grief\": \"sadness\",\n",
+    "            \"amusement\": \"happiness\",\n",
+    "            \"caring\": \"happiness\",\n",
+    "            \"nervousness\": \"fear\",\n",
+    "            \"pride\": \"happiness\",\n",
+    "        }\n",
+    "        self._load_encoders()\n",
+    "\n",
+    "    def _load_encoders(self):\n",
+    "        \"\"\"\n",
+    "        Load label encoders for emotion, sub_emotion, and intensity.\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            with open(f\"{self.encoders_dir}/emotion_encoder.pkl\", \"rb\") as f:\n",
+    "                self.emotion_encoder = pickle.load(f)\n",
+    "            with open(f\"{self.encoders_dir}/sub_emotion_encoder.pkl\", \"rb\") as f:\n",
+    "                self.sub_emotion_encoder = pickle.load(f)\n",
+    "            with open(f\"{self.encoders_dir}/intensity_encoder.pkl\", \"rb\") as f:\n",
+    "                self.intensity_encoder = pickle.load(f)\n",
+    "        except Exception as e:\n",
+    "            raise RuntimeError(f\"Failed to load encoders: {e}\")\n",
+    "\n",
+    "    def get_prediction(self, text):\n",
+    "        \"\"\"\n",
+    "        Send a request to the Azure endpoint and return the raw response.\n",
+    "        \"\"\"\n",
+    "        data = {\"text\": text}\n",
+    "        body = str.encode(json.dumps(data))\n",
+    "        headers = {\n",
+    "            'Content-Type': 'application/json',\n",
+    "            'Accept': 'application/json',\n",
+    "            'Authorization': 'Bearer ' + self.api_key\n",
+    "        }\n",
+    "        req = urllib.request.Request(self.endpoint_url, body, headers)\n",
+    "        try:\n",
+    "            response = urllib.request.urlopen(req)\n",
+    "            result = response.read()\n",
+    "            return json.loads(result.decode(\"utf-8\"))\n",
+    "        except urllib.error.HTTPError as error:\n",
+    "            raise RuntimeError(f\"Request failed: {error.code} {error.read().decode('utf8', 'ignore')}\")\n",
+    "\n",
+    "    def decode_and_postprocess(self, raw_predictions):\n",
+    "        \"\"\"\n",
+    "        Decode raw predictions and post-process sub-emotion to ensure consistency.\n",
+    "        \"\"\"\n",
+    "        # Defensive: handle both logits and index predictions\n",
+    "        try:\n",
+    "            # If predictions are logits, take argmax\n",
+    "            if isinstance(raw_predictions.get(\"emotion\"), (list, np.ndarray)):\n",
+    "                emotion_idx = int(np.argmax(raw_predictions[\"emotion\"]))\n",
+    "            else:\n",
+    "                emotion_idx = int(raw_predictions[\"emotion\"])\n",
+    "            if isinstance(raw_predictions.get(\"sub_emotion\"), (list, np.ndarray)):\n",
+    "                sub_emotion_logits = np.array(raw_predictions[\"sub_emotion\"])\n",
+    "                # Will post-process below\n",
+    "            else:\n",
+    "                sub_emotion_logits = None\n",
+    "                sub_emotion_idx = int(raw_predictions[\"sub_emotion\"])\n",
+    "            if isinstance(raw_predictions.get(\"intensity\"), (list, np.ndarray)):\n",
+    "                intensity_idx = int(np.argmax(raw_predictions[\"intensity\"]))\n",
+    "            else:\n",
+    "                intensity_idx = int(raw_predictions[\"intensity\"])\n",
+    "        except Exception as e:\n",
+    "            raise ValueError(f\"Malformed raw predictions: {e}\")\n",
+    "\n",
+    "        # Decode main emotion\n",
+    "        emotion = self.emotion_encoder.inverse_transform([emotion_idx])[0]\n",
+    "\n",
+    "        # Post-process sub-emotion: only allow sub-emotions that map to the predicted emotion\n",
+    "        if sub_emotion_logits is not None:\n",
+    "            sub_emotion_classes = self.sub_emotion_encoder.classes_\n",
+    "            # Get valid sub-emotion indices for this emotion\n",
+    "            valid_indices = [\n",
+    "                i for i, label in enumerate(sub_emotion_classes)\n",
+    "                if self.emotion_mapping.get(label) == emotion\n",
+    "            ]\n",
+    "            if valid_indices:\n",
+    "                # Pick the valid sub-emotion with highest logit\n",
+    "                best_idx = valid_indices[np.argmax(sub_emotion_logits[valid_indices])]\n",
+    "                sub_emotion = sub_emotion_classes[best_idx]\n",
+    "            else:\n",
+    "                # Fallback: pick the most probable sub-emotion\n",
+    "                sub_emotion = self.sub_emotion_encoder.inverse_transform([int(np.argmax(sub_emotion_logits))])[0]\n",
+    "        else:\n",
+    "            # If only index is given, just decode\n",
+    "            sub_emotion = self.sub_emotion_encoder.inverse_transform([sub_emotion_idx])[0]\n",
+    "            # Optionally, check mapping and fallback if not valid\n",
+    "            if self.emotion_mapping.get(sub_emotion) != emotion:\n",
+    "                # Fallback: pick first valid sub-emotion for this emotion\n",
+    "                sub_emotion_classes = self.sub_emotion_encoder.classes_\n",
+    "                valid_labels = [label for label in sub_emotion_classes if self.emotion_mapping.get(label) == emotion]\n",
+    "                if valid_labels:\n",
+    "                    sub_emotion = valid_labels[0]\n",
+    "\n",
+    "        # Decode intensity\n",
+    "        intensity = self.intensity_encoder.inverse_transform([intensity_idx])[0]\n",
+    "\n",
+    "        return {\n",
+    "            \"emotion\": emotion,\n",
+    "            \"sub_emotion\": sub_emotion,\n",
+    "            \"intensity\": intensity\n",
+    "        }\n",
+    "\n",
+    "    def predict(self, text):\n",
+    "        \"\"\"\n",
+    "        Full workflow: get prediction, decode, and post-process.\n",
+    "        \"\"\"\n",
+    "        api_response = self.get_prediction(text)\n",
+    "        if api_response.get('status') != 'success':\n",
+    "            raise RuntimeError(\"API call was not successful\")\n",
+    "        raw_predictions = api_response.get('raw_predictions', {})\n",
+    "        return self.decode_and_postprocess(raw_predictions)\n",
+    "\n",
+    "# Example usage:\n",
+    "# predictor = AzureEmotionPredictor(api_key, endpoint_url, encoders_dir=\"models/encoders\")\n",
+    "# result = predictor.predict(\"This is a test sentence to evaluate the DeBERTa endpoint.\")\n",
+    "# print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "234efd9f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -87,7 +414,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "emotion-clf-pipeline-bOnCAZAr-py3.11",
+   "display_name": "emotion-clf-pipeline",
    "language": "python",
    "name": "python3"
   },
@@ -101,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
